WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291686
FontAttributesCocoa.mm: Fix local unretained references
https://bugs.webkit.org/show_bug.cgi?id=291686
Summary
FontAttributesCocoa.mm: Fix local unretained references
Vitor Roriz
Reported
2025-04-17 09:26:17 PDT
FontAttributesCocoa.mm: Fix local unretained references
Attachments
Add attachment
proposed patch, testcase, etc.
Vitor Roriz
Comment 1
2025-04-17 09:26:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44200
Radar WebKit Bug Importer
Comment 2
2025-04-17 09:31:14 PDT
<
rdar://problem/149485184
>
EWS
Comment 3
2025-04-17 10:47:23 PDT
Committed
293809@main
(a85020d7a135): <
https://commits.webkit.org/293809@main
> Reviewed commits have been landed. Closing PR #44200 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug