FontAttributesCocoa.mm: Fix local unretained references https://bugs.webkit.org/show_bug.cgi?id=291686 rdar://149485184

Reviewed by Ryosuke Niwa.

* Source/WebCore/SaferCPPExpectations/UnretainedLocalVarsCheckerExpectations:
* Source/WebCore/editing/cocoa/FontAttributesCocoa.mm:
(WebCore::FontAttributes::createDictionary const):

Canonical link: https://commits.webkit.org/293809@main